feat：完善通用缓存存储框架的设计

--- a/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
+++ b/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
@@ -48,6 +48,7 @@
 
 ### 05.成长生涯的愿景
 - “生涯” 一词最早来自庄子语：吾生也有涯，而知也无涯。以有涯随无涯，殆已。“涯” 字的原意是水边，隐喻人生道路的尽头，尽头已经没了路，是终点，是边界。
+    - ![image](https://img-blog.csdnimg.cn/82d8d3de74c0464f9c28cbfcee7a5ac4.png)
 - 对生涯提出了四个维度：高度、宽度、深度和温度。这里就借他山之玉，来谈谈我的理解。
 - 高度：背后的价值观是影响与权力。代表性关键词有：追逐竞争、改变生活。
 - 深度：背后的价值观是卓越与智慧。代表性关键词有：专业主义、工匠精神。
