--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -178,8 +178,6 @@
     - 1.没有类型信息，不支持getAll。由于没有记录类型信息，MMKV无法自动反序列化，也就无法实现getAll接口。
     - 2.需要引入so，增加包体积：引入MMKV需要增加的体积还是不少的。
     - 3.文件只增不减：MMKV的扩容策略还是比较激进的，而且扩容之后不会主动trim size。
-- 存储方案DiskLruCache的不足
-    - 1.
 - 存储方案DataStore的不足
     - 1.只是提供异步API，没有提供同步API方法。在进行大量同步存储的时候，使用runBlocking同步数据可能会卡顿。
     - 2.对主线程执行同步 I/O 操作可能会导致 ANR 或界面卡顿。可以通过从 DataStore 异步预加载数据来减少这些问题。
@@ -321,9 +319,9 @@
     - ![image](https://img-blog.csdnimg.cn/0df33309100c4649b166d0b501413e9d.png)
     - 这种设计最直接问题就是占用空间变大了很多，举一个例子，只存储了一个字段，但是为了方便MMAP映射，磁盘直接占用了8k的存储。
 - LruDiskCache 存储文件格式如下所示
-    - 
+    - ![image](https://img-blog.csdnimg.cn/f47feb213a534fd689263ea694d0efc9.png)
 - DataStore 存储文件格式如下所示
-
+    - ![image](https://img-blog.csdnimg.cn/97b1bfea52dc4f17bb1983975fff8d1c.png)
 
 
 
@@ -397,6 +395,13 @@
 
 
 #### 4.5 缓存的阀值处理
+- 淘汰一个最早的节点就足够吗？以Lru缓存为案例做分析……
+    - 标准的 LRU 策略中，每次添加数据时最多只会淘汰一个数据，但在 LRU 内存缓存中，只淘汰一个数据单元往往并不够。
+    - 例如在使用 “计量” 的内存图片缓存中，在加入一个大图片后，只淘汰一个图片数据有可能依然达不到最大缓存容量限制。
+- 那么在LRUCache该如何做呢？
+    - 在复用 LinkedHashMap 实现 LRU 内存缓存时，前文提到的 LinkedHashMap#removeEldestEntry() 淘汰判断接口可能就不够看了，因为它每次最多只能淘汰一个数据单元。
+- LruCache是如何解决这个问题
+    - 这个地方就需要重写LruCache中的sizeOf()方法，然后拿到key和value对象计算其内存大小。
 
 
 
@@ -440,7 +445,7 @@
 
 #### 4.8 缓存数据加密
 - 思考一下，如果让你去设计数据的加密，你该怎么做？
-
+    - 具体可以参考MMKV的数据加密过程。
 
 
 #### 4.9 缓存效率的对比
@@ -495,7 +500,7 @@
 ### 06.其他设计说明
 #### 6.1 性能设计
 - 关于基础库性能如何考量
-    - 性能一般
+    - 具体性能可以参考测试效率的对比。
 
 
 #### 6.2 稳定性设计
@@ -506,6 +511,7 @@
 
 
 #### 6.3 灰度设计
+- 暂无灰度设计
 
 
 #### 6.4 降级设计
@@ -538,6 +544,8 @@
     - 遇到问题：不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
     - 问题分析：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
     - 如何解决：在项目中只在顶层调用一次 preferencesDataStore 方法，这样可以更轻松地将 DataStore 保留为单例。
+- MMKV遇到的坑说明
+    - MMKV 是有数据损坏的概率的，MMKV 的 GitHub wiki 页面显示，微信的 iOS 版平均每天有 70 万次的数据校验不通过（即数据损坏）。
 
 
 
@@ -561,7 +569,8 @@
 #### 7.1 如何依赖该库
 - 依赖该库如下所示
     ``` java
-    
+    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.4.8'
     ```
 
 
@@ -684,11 +693,10 @@
 
 
 
+#### 8.2 项目开发分享
+- 通用缓存存储库开源代码
+    - https://github.com/yangchong211/YCCommonLib/tree/master/AppBaseStore
 
-#### 8.2 遗留的问题
-
-
-#### 8.3 未来的规划
 
 
 #### 8.4 参考链接记录
@@ -707,5 +715,3 @@
     - https://mp.weixin.qq.com/s/kfF83UmsGM5w43rDCH544g
 - 【面试黑洞】Android 的键值对存储有没有最优解？
     - https://blog.csdn.net/LSpQ35k7O5AJ21l1H9o/article/details/125437208
-
-
