--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -4,7 +4,11 @@
     - 1.1 组件的UI实现介绍
     - 1.2 Activity组件类关系
     - 1.3 Window类的实现
-    - 1.4 
+    - 1.4 ViewRoot类的实现
+- 02.上下文环境创建过程
+    - 2.1 窗口运行环境介绍
+    - 2.2 Context创建流程
+
 
 
 ### 01.Android组件UI实现
@@ -42,6 +46,45 @@
 - DecorView类继承了FrameLayout类
     - DecorView类继承了FrameLayout类，而FrameLayout类又继承了ViewGroup类，最后ViewGroup类又继承了View类。View类有一个成员函数draw，它是用来绘制应用程序窗口的UI的。
     - DecorView类、FrameLayout类和ViewGroup类都重写了父类的成员函数draw，这样，它们就都可以定制自己的UI。
+- DecorView类所描述的应用程序窗口视图是否需要重新绘制是由另外一个类ViewRoot来控制的。
+    - 系统在启动一个Activity组件的过程中，会为这个Activity组件创建一个ViewRoot对象，同时还会将前面为这个Activity组件所创建的一个PhoneWindow对象的成员变量mDecor所描述的一个视图（DecorView）保存在这个ViewRoot对象的成员变量mView中。
+    - 这个ViewRoot对象就可以通过调用它的成员变量mView的所描述的一个DecorView的成员函数draw来绘制一个Activity组件的UI了。
+
+
+
+#### 1.4 ViewRoot类的实现
+- ViewRoot类的实现图
+    - ![image](https://img-blog.csdnimg.cn/08db5172602841529d8c5873660e324f.png)
+    - ViewRoot类的作用是非常大的，它除了用来控制一个Activity组件的UI绘制之外，还负责接收Activity组件的IO输入事件，例如，键盘事件
+- ViewRoot类的创建过程
+    > WindowManagerImpl#addView()，在这个类中可以看到调用了mGlobal.addView()，而mGlobal是WindowManagerGlobal的对象。
+    > WindowManagerGlobal#addView()，这里面逻辑很核心，创建ViewRootImpl对象，这个是布局渲染的核心类
+    > WindowManagerGlobal#addView#root.setView()，实现了view与root的关联，这个root是ViewRootImpl对象
+
+
+
+### 02.上下文环境创建过程
+#### 2.1 窗口运行环境介绍
+- Android应用程序窗口在运行的过程中，需要访问一些特定的资源或者类。
+    - 这些特定的资源或者类构成了Android应用程序的运行上下文环境，Android应用程序窗口可以通过一个Context接口来访问它，这个Context接口也是我们在开发应用程序时经常碰到的。
+
+
+
+
+#### 2.2 Context创建流程
+- 
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
