feat：完善通知弹窗设计

--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -67,19 +67,34 @@
 #### 2.1 窗口运行环境介绍
 - Android应用程序窗口在运行的过程中，需要访问一些特定的资源或者类。
     - 这些特定的资源或者类构成了Android应用程序的运行上下文环境，Android应用程序窗口可以通过一个Context接口来访问它，这个Context接口也是我们在开发应用程序时经常碰到的。
-
+- Android应用程序窗口的运行上下文环境是通过ContextImpl类来描述的，即每一个Activity组件都关联有一个ContextImpl对象。
+    - ![image](https://img-blog.csdnimg.cn/f01624ded7b14201b870217fb5624d5e.png)
+    - Activity组件通过其父类ContextThemeWrapper和ContextWrapper的成员变量mBase来引用了一个ContextImpl对象。
+    - 这样，Activity组件以后就可以通过这个ContextImpl对象来执行一些具体的操作，例如，启动Service组件、注册广播接收者和启动Content Provider组件等操作。
 
 
 
 #### 2.2 Context创建流程
-- 
-
-
-
-
-
-
-
+- Context创建流程
+    - 通过ActivityThread类的成员函数performLaunchActivity在应用程序进程中创建一个Activity实例，并且为它设置运行上下文环境，即为它创建一个ContextImpl对象。
+    - ![image](https://img-blog.csdnimg.cn/31f9b74ee10644a4ac6ce2952d567c93.png)
+- Android应用程序窗口的运行上下文环境的创建过程
+    - 第一步：ActivityThread#performLaunchActivity()，主要看mInstrumentation.newActivity()的过程。Instrumentation类是用来记录应用程序与系统的交互过程的
+        - 要启动的Activity组件的类名保存在变量component。有了这个类名之后，函数就可以调用ActivityThread类的成员变量mInstrumentation所描述一个Instrumentation对象的成员函数newActivity来创建一个Activity组件实例了，并且保存变量activity中。
+    - 第二步：ActivityThread#createBaseContextForActivity，这里是创建ContextImpl的步骤
+        - 
+    - 第三步：Instrumentation#newActivity()，这个是创建activity的过程。创建好了要启动的Activity组件实例之后，函数接下来就可以对它进行初始化了。
+    - 第四步：new Activity，第二步通过反射创建activity对象，创建对象是必须通过构造函数创建的
+        - 一般来说，一个类的构造函数是用来初始化该类的实例的，系统为Activity类提供的默认构造函数什么也不做，也就是说，Activity类实例在创建的时候，还没有执行实质的初始化工作。
+    - 第五步：appContext.setOuterContext()，
+    - 第六步：activity.attach()，
+        - 初始化一个Activity组件实例需要一个Application对象app、一个ContextImpl对象appContext以及一个Configuration对象config，它们分别用来描述该Activity组件实例的应用程序信息、运行上下文环境以及配置信息。
+        - 
+    - 第七步：ContextThemeWrapper.attachBaseContext()，接着第五步往下分析
+    - 第八步：ContextWrapper.attachBaseContext()，，接着第七步往下分析
+    - 第九步：Instrumentation#callActivityOnCreate()，主要是执行activity的生命周期onCreate
+        - 函数主要就是调用当前正在启动的Activity组件的成员函数onCreate，用来通知它已经成功地创建和启动完成了。
+    - 第十步：Activity#onCreate()，
 
 
 
