feat：完善通知弹窗设计

--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -8,6 +8,10 @@
 - 02.上下文环境创建过程
     - 2.1 窗口运行环境介绍
     - 2.2 Context创建流程
+    - 2.3 运行环境总结下
+- 03.窗口Window创建
+    - 3.1 
+
 
 
 
@@ -82,22 +86,40 @@
     - 第一步：ActivityThread#performLaunchActivity()，主要看mInstrumentation.newActivity()的过程。Instrumentation类是用来记录应用程序与系统的交互过程的
         - 要启动的Activity组件的类名保存在变量component。有了这个类名之后，函数就可以调用ActivityThread类的成员变量mInstrumentation所描述一个Instrumentation对象的成员函数newActivity来创建一个Activity组件实例了，并且保存变量activity中。
     - 第二步：ActivityThread#createBaseContextForActivity，这里是创建ContextImpl的步骤
-        - 
-    - 第三步：Instrumentation#newActivity()，这个是创建activity的过程。创建好了要启动的Activity组件实例之后，函数接下来就可以对它进行初始化了。
+        - 这里最终会调用到ContextImpl#createActivityContext，通过new创建该impl对象，且进行初始化附值操作。
+    - 第三步：Instrumentation#newActivity()，这个是创建activity的过程。
+        - 这里是通过ClassLoader去load具体的要加载的类的className，得到一个Class对象。 
+        - 由于className描述的是一个Activity子类，因此，当函数调用前面得到的Class对象的成员函数newInstance的时候，就会创建一个Activity子类实例。
     - 第四步：new Activity，第二步通过反射创建activity对象，创建对象是必须通过构造函数创建的
         - 一般来说，一个类的构造函数是用来初始化该类的实例的，系统为Activity类提供的默认构造函数什么也不做，也就是说，Activity类实例在创建的时候，还没有执行实质的初始化工作。
-    - 第五步：appContext.setOuterContext()，
-    - 第六步：activity.attach()，
+    - 第五步：appContext.setOuterContext()，还是在performLaunchActivity方法里面，看看做了什么
+        - 即ActivityThread类的成员函数performLaunchActivity中，接下来就会调用ContextImpl类的成员函数setOuterContext来设置前面所创建一个ContextImpl对象所关联的一个Activity组件，即正在启动的Activity组件。
+        - 一个ContextImpl对象所关联的一个Activity组件是通过调用ContextImpl类的成员函数setOuterContext来设置的。
+        - setOuterContext只是简单地将它保存在成员变量mContext中，以表明当前正在处理的一个ContextImpl对象是用来描述一个Activity组件的运行上下文环境的。
+    - 第六步：activity.attach()，这里是真正进入到Activity初始化的过程
         - 初始化一个Activity组件实例需要一个Application对象app、一个ContextImpl对象appContext以及一个Configuration对象config，它们分别用来描述该Activity组件实例的应用程序信息、运行上下文环境以及配置信息。
-        - 
-    - 第七步：ContextThemeWrapper.attachBaseContext()，接着第五步往下分析
+        - 最开始是调用Activity#attachBaseContext()方法，这个我们看下面的第七步。
+        - 接着创建了一个PhoneWindow，并且保存在Activity类的成员变量mWindow中。这个PhoneWindow是用来描述当前正在启动的应用程序窗口的。
+        - 这个应用程序窗口在运行的过程中，会接收到一些事件，例如，键盘、触摸屏事件等，这些事件需要转发给与它所关联的Activity组件处理，这个转发操作是通过一个Window.Callback接口来实现的。
+        - 参数info指向的是一个ActivityInfo对象，用来描述当前正在启动的Activity组件的信息。其中，这个ActivityInfo对象的成员变量softInputMode用来描述当前正在启动的一个Activity组件是否接受软键盘输入。
+    - 第七步：ContextThemeWrapper.attachBaseContext()，接着第六步往下分析
+        - 由调用Activity#attachBaseContext()方法分析，最终会调用到ContextThemeWrapper#attachBaseConext。
+        - ContextThemeWrapper类用来维护一个应用程序窗口的主题，而用来描述这个应用程序窗口的运行上下文环境的一个ContextImpl对象就保存在ContextThemeWrapper类的成员函数mBase中。
     - 第八步：ContextWrapper.attachBaseContext()，，接着第七步往下分析
+        - ContextWrapper类只是一个代理类，它只是简单地封装了对其成员变量mBase所描述的一个Context对象的操作。
+        - ContextWrapper类的成员函数attachBaseContext的实现很简单，它只是将参数base所描述的一个ContextImpl对象保存在成员变量mBase中。这样，ContextWrapper类就可以将它的功能交给ContextImpl类来具体实现。
     - 第九步：Instrumentation#callActivityOnCreate()，主要是执行activity的生命周期onCreate
         - 函数主要就是调用当前正在启动的Activity组件的成员函数onCreate，用来通知它已经成功地创建和启动完成了。
-    - 第十步：Activity#onCreate()，
+    - 第十步：Activity#onCreate()，这里会回调Activity的方法，也是开发的入口
+        - 一般来说，我们都是通过定义一个Activity子类来实现一个Activity组件的。重写父类Activity的某些成员函数的时候，必须要回调父类Activity的这些成员函数。
+        - 例如，当Activity子类在重写父类Activity的成员函数onCreate时，就必须回调父类Activity的成员函数onCreate。这些成员函数被回调了之后，Activity类就会将其成员变量mCalled的值设置为true。这样，Activity类就可以通过其成员变量mCalled来检查其子类在重写它的某些成员函数时，是否正确地回调了父类的这些成员函数。
 
 
-
+### 2.3 运行环境总结下
+- 一个Activity组件的创建过程，以及它的运行上下文环境的创建过程。这个过程比较简单，我们是从中获得以下三点信息：
+    - 一个Android应用窗口的运行上下文环境是使用一个ContextImpl对象来描述的，这个ContextImpl对象会分别保存在Activity类的父类ContextThemeWrapper和ContextWrapper的成员变量mBase中，即ContextThemeWrapper类和ContextWrapper类的成员变量mBase指向的是一个ContextImpl对象。
+    - Activity组件在创建过程中，即在它的成员函数attach被调用的时候，会创建一个PhoneWindow对象，并且保存在成员变量mWindow中，用来描述一个具体的Android应用程序窗口。
+    - Activity组件在创建的最后，即在它的子类所重写的成员函数onCreate中，会调用父类Activity的成员函数setContentView来创建一个Android应用程序窗口的视图。
 
 
 
