feat：完善通知弹窗设计

--- a/Read/ReadBlogWiki/04.执行策略/15.金字塔汇报方法.md
+++ b/Read/ReadBlogWiki/04.执行策略/15.金字塔汇报方法.md
@@ -90,13 +90,15 @@
 
 
 #### 4.4 总结改进
-- 总结经验教训和后续改进措施，注意不要随便拍脑袋提出改进措施，改进措施本身也要求有理有据。要注意，列出来的改进措施，一定是你接下来真的准备去做的，不要为了凑数而加上去，因为下次汇报的时候，领导很可能会想先了解一下你上次汇报时列出的改进措施到底落实得怎么样。
+- 总结经验教训和后续改进措施，注意不要随便拍脑袋提出改进措施，改进措施本身也要求有理有据。
+- 要注意，列出来的改进措施，一定是你接下来真的准备去做的，不要为了凑数而加上去，因为下次汇报的时候，领导很可能会想先了解一下你上次汇报时列出的改进措施到底落实得怎么样。
 
 
 
 ### 05.拥有结构化思维
 - 人在思考和表达的时候，有没有一个清晰的结构。“思考”一词看起来虚幻，但它其实是存在某种结构的，也就是结构化思维，它决定了一个人看待问题、分析问题、解决问题的角度。
-- 所谓结构化思维，是将无序的信息梳理为有序的信息，并通过一些逻辑、框架，将问题有规律地拆解、细化、提炼、归因，最终找到有效解决方案的过程。它会让我们思考得更全面、深刻，表达得更清晰、有力，行动起来更高效，更容易抓住重点、掌控全局。
+- 所谓结构化思维，是将无序的信息梳理为有序的信息，并通过一些逻辑、框架，将问题有规律地拆解、细化、提炼、归因，最终找到有效解决方案的过程。
+- 它会让我们思考得更全面、深刻，表达得更清晰、有力，行动起来更高效，更容易抓住重点、掌控全局。
 
 
 ### 06.总结一下汇报法
