feat：完善通知弹窗设计

--- a/Read/ReadMeWiki/07.Jetpack/06.Lifecycle学习.md
+++ b/Read/ReadMeWiki/07.Jetpack/06.Lifecycle学习.md
@@ -1,8 +1,7 @@
 #### 目录介绍
 - 01.Lifecycle介绍
     - 1.1 是什么东西
-    - 1.2 有何优点
-    - 1.3 应用场景
+    - 1.2 应用场景
 - 02.Lifecycle实战必备
     - 2.1 学习方式
     - 2.2 实战必备
@@ -32,10 +31,7 @@
 ### 01.Lifecycle介绍
 #### 1.1 是什么东西
 - Lifecycle 是一个专门用来处理生命周期的库
-    - 它能够帮助我们将 Activity、Fragment 的生命周期处理与业务逻辑处理进行完全解耦，让我们能够更加专注于业务；通过解耦让 Activity、Fragment 的代码更加可读可维护。
-
-
-#### 1.2 有何优点
+    - 它能够帮助我们将 Activity、Fragment 的生命周期处理与业务逻辑处理进行完全解耦，能够更加专注于业务；通过解耦让 Activity、Fragment 的代码更加可读可维护。
 
 
 #### 1.3 应用场景
@@ -56,8 +52,13 @@
     - demo官方：[Lifecycle 案例]()
 
 
-
 #### 2.2 实战必备
+- 先思考一下以下几个问题
+    - Lifecycle 是如何设计绑定Activity或者Fragment的生命周期？
+    - Lifecycle 是如何做消息移除，如何做网络请求取消操作的？
+    - 什么场景下会用到 Lifecycle ，用了之后有什么好处？是业务解耦合，还是什么优势？
+- 不妨从设计者角度去考量
+    - 如何要做到监听Activity生命周期，可以通过registerActivityLifecycleCallbacks实现，也可以在Activity源码封装一层。
 
 
 
