--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -2,7 +2,7 @@
 - 01.为何要技能地图
 - 02.技能的不同维度
 - 03.绘制自己的地图
-- 04.将技能地图拆分
+- 04.技能地图的落地
 - 05.技能地图的演变
 - 06.思考需要流程化
 
@@ -47,14 +47,39 @@
 
 
 
-### 04.将技能地图拆分
+### 04.技能地图的落地
+#### 4.1 技能地图的目标
 - 由于技能地图上罗列的都是能力的抽象，在实际的生活中，还需要将技能具体化，这样做的目的是为了更加方便自己去落实和实践。
 - 举一个简单的例子，针对移动端开发来说，拥有扎实的Java基础，那么具体化是要求掌握面向对象思想，熟练运用数据结构，掌握并发的知识等等，这就是将抽象能力具体化。
 - 针对每一个大的能力抽象，尽可能的把它具体化，这是一个长期不断迭代优化的事项，因此这块可以做一个长期主义者。逐步去完善技能地图的拆分工作。
 
 
+#### 4.2 技能地图的构建
+- 技能地图是如何构建的呢？有以下四个步骤：
+- 第一步：将产品或者工作领域需要的技能逐一列出。先罗列大概的点，最好是用思维导图。
+- 第二步：自评。每个人对自己在每一项技能水平打分：0-9分，从完全不懂到极其精通。每个档是相对比较，不需要有明确的定义。
+- 第三步：能力基线化。将评估结果作为自身能力基线，基于现实能力水平和工作需要制定能力提升计划：每个人的哪一项能力，需要花多长时间提升到一个层级，尤其关注的是那些从0到1的提升。
+- 初次制作技能地图后，需要定期更新。比如，每隔5—6个月一次，需要更新自己技能评估，并制定下一步的提升计划。
+
+
+
+#### 4.3 技能地图的实践
+
+
+
+#### 4.4 技能地图的考核
+- 用这个评估系统自评打分。分值定义如下：0：None –不具备该项能力；1：Basic –具备基本能力；2：Competent –完全具备能力；3：Professional –专家级，可以指导其他人。
+- 针对自身的能力自评：了解职业发展目标，规划成长路线，宏观地判断出能力短板，从而找准能力提升的方向。寻找匹配能力发展的机会以及制定培训计划等方式帮助达成个人成长目标。
+- 注意问题：避免单纯收集了自己的技能数据，没有分析和复盘开展能力发展的讨论，也没有进一步利用这个技能地图开展组织级能力发展的规划。
+
+
 
 ### 05.技能地图的演变
+
+
+
+
+
 
 
 
