--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.为何要技能地图
 - 02.技能的不同维度
-- 03.绘制自己的地图
+- 03.能力地图的划分
 - 04.技能地图的落地
 - 05.技能地图的演变
 - 06.思考需要流程化
@@ -9,14 +9,29 @@
 
 
 ### 01.为何要技能地图
+#### 1.1 你晋升资本是什么
 - 有的人经常会说一定要找到一份月薪多少多少的工作，争取做到什么什么职位，未来要赚多少的钱。耐心听完“远大蓝图”，然后想一想：“凭什么达到自己的目标？你的资本是什么？”
-- 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　　
+- 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　
+
+
+#### 1.2 工作日常的烦恼
+- 不管所处什么行业做什么工作，在日常的工作中，你是否有这样的烦恼：
+- ❶对自己的工作缺乏系统的认识，遇到实际问题时，没有有效的流程或模型，为自己的行动提供方向。
+- ❷想要做有针对性的学习、查缺补漏，但又不知道自己缺什么，应该从哪里补起。
+- ❸就算学了一堆干货、课程，但对自己的工作还是没有一点帮助，很难应用到实践中。
+
+
+#### 1.3 技能是亮剑资本
 - 人生在发展过程中，很多时候都需要毫不犹豫地向别人展示自己的实力，要敢于展示，善于展示，拥有自己的技能地图，这就是“亮剑”。
 - 既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看？“亮剑”的资本又在哪里？因此，我们需要绘制自己的技能地图，不断地完善地图上的点……
 
 
 
+
+
+
 ### 02.技能的不同维度
+#### 2.1 
 - 在技能地图中，需要先开启和点亮哪些部分呢？回顾过去的经历并结合现实的需要，可以从如下四个不同程度的维度来说明：了解；掌握；熟练；精通。
 - 了解，相对掌握不是必需，但也需要达到知其然的程度，甚至知其所以然更好。
 - 掌握，意味着是一开始就要求熟练掌握的硬技能，这是生存之本。而至于掌握的深度，是动态的，倒是可以在行进过程中不断去迭代加深。
@@ -25,7 +40,8 @@
 - 综合应用，结合实际多个知识点，在实践中能够形成一套自己的方案，运用所掌握的知识，搞定一件大的方案实践。
 
 
-### 03.绘制自己的地图
+
+### 03.能力地图的划分
 #### 3.1 基础能力
 - 基础能力：具备大型规模项目的把控和设计能力，技术上具备完全把握一个技术方向的能力，并擅长将大规模项目拆解成多向中型规模的项目，并保证产品业务能达成预期的目标。具备跨团队资源协调，具备计划制定与风险控制能力。
 
@@ -59,7 +75,7 @@
 - 第一步：将产品或者工作领域需要的技能逐一列出。先罗列大概的点，最好是用思维导图。
 - 第二步：自评。每个人对自己在每一项技能水平打分：0-9分，从完全不懂到极其精通。每个档是相对比较，不需要有明确的定义。
 - 第三步：能力基线化。将评估结果作为自身能力基线，基于现实能力水平和工作需要制定能力提升计划：每个人的哪一项能力，需要花多长时间提升到一个层级，尤其关注的是那些从0到1的提升。
-- 初次制作技能地图后，需要定期更新。比如，每隔5—6个月一次，需要更新自己技能评估，并制定下一步的提升计划。
+- 初次制作技能地图后，需要定期更新。比如，每隔6个月一次，需要更新自己技能评估，并制定下一步的提升计划。
 
 
 
