--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -10,9 +10,10 @@
     - 2.2 Context创建流程
     - 2.3 运行环境总结下
 - 03.窗口Window创建
-    - 3.1 
-
-
+    - 3.1 Activity和Window
+    - 3.2 窗口Window创建过程
+- 04.视图View创建
+    - 4.1 
 
 
 ### 01.Android组件UI实现
@@ -121,6 +122,42 @@
     - Activity组件在创建过程中，即在它的成员函数attach被调用的时候，会创建一个PhoneWindow对象，并且保存在成员变量mWindow中，用来描述一个具体的Android应用程序窗口。
     - Activity组件在创建的最后，即在它的子类所重写的成员函数onCreate中，会调用父类Activity的成员函数setContentView来创建一个Android应用程序窗口的视图。
 
+
+
+### 03.窗口Window创建
+#### 3.1 Activity和Window
+- 在PHONE平台上，与Activity组件所关联的窗口对象的实际类型为PhoneWindow，后者是从Window类继承下来的。
+    - ![image](https://img-blog.csdnimg.cn/8bdde1f9e8bb440fbf636691ceff94e5.png)
+- Window和PhoneWindow的类关系图。
+    - ![image](https://img-blog.csdnimg.cn/b472e7810dac425cbc873a8d13efb672.png)
+
+
+
+#### 3.2 窗口Window创建过程
+- Activity组件所关联的一个PhoneWindow对象是从Activity类的成员函数attach中创建的。
+    - ![image](https://img-blog.csdnimg.cn/36f52a142e944549a2529a4880f0dbc4.png)
+- Android应用程序窗口创建过程的源码流程分析
+    - Activity#attach()，在attach方法中创建了核心的Window窗口
+        - 有了这个类型为PhoneWindow的应用程序窗口，函数接下来还会调用它的成员函数setCallback、setSoftInputMode和setWindowManager来设置窗口回调接口、软键盘输入区域的显示模式和本地窗口管理器。
+    - PhoneWindow#()，在构造函数中获取布局解析器
+        - 首先调用父类Window的构造函数来执行一些初始化操作，接着再调用LayoutInflater的静态成员函数from创建一个LayoutInflater实例，并且保存在成员变量mLayoutInflater中。
+        - PhoneWindow类以后就可以通过成员变量mLayoutInflater来创建应用程序窗口的视图，这个视图使用类型为DecorView的成员变量mDecor来描述。
+        - PhoneWindow类还有另外一个类型为ViewGroup的成员变量mContentParent，用来描述一个视图容器，这个容器存放的就是成员变量mDecor所描述的视图的内容，不过这个容器也有可能指向的是mDecor本身。
+    - Activity#attach()中mWindow.setCallback(this)，这个是设置接口与Activity关联
+        - 正在启动的Activity组件会将它所实现的一个Callback接口设置到与它所关联的一个PhoneWindow对象的父类Window的成员变量mCallback中去
+        - 这样当这个PhoneWindow对象接收到系统给它分发的IO输入事件。例如，键盘和触摸屏事件，转发给与它所关联的Activity组件处理
+    - Activity#attach()中mWindow.setSoftInputMode()，这个是设置输入键盘和Activity关联
+        - PhoneWindow对象从父类Window继承下来的成员函数setSoftInputMode来设置应用程序窗口的软键盘输入区域的显示模式
+    - Activity#attach()中mWindow.setWindowManager()，这个是本地窗口管理器和Activity关联
+        - 调用前面所创建的PhoneWindow对象从父类Window继承下来的成员函数setWindowManager来设置应用程序窗口的本地窗口管理器
+        - 参数appToken用来描述当前正在处理的窗口是与哪一个Activity组件关联的，它是一个Binder代理对象，引用了在ActivityManagerService这一侧所创建的一个类型为ActivityRecord的Binder本地对象。
+        - 参数appName用来描述当前正在处理的窗口所关联的Activity组件的名称，这个名称会被保存在Window类的成员变量mAppName中。
+        - 参数wm用来描述一个窗口管理器。从前面的调用过程可以知道， 这里传进来的参数wm的值等于null，因此，函数首先会调用WindowManagerImpl类的静态成员函数getDefault来获得一个默认的窗口管理器。有了这个窗口管理器之后，函数接着再使用它来创建一个本地窗口管理器，即一个LocalWindowManager对象，用来维护当前正在处理的应用程序窗口。
+- 分析完成一个Activity组件所关联的应用程序窗口对象的创建过程了。从分析的过程可以知道：
+    - 一个Activity组件所关联的应用程序窗口对象的类型为PhoneWindow。
+    - 这个类型为PhoneWindow的应用程序窗口是通过一个类型为LocalWindowManager的本地窗口管理器来维护的。
+    - 这个类型为LocalWindowManager的本地窗口管理器又是通过一个类型为WindowManagerImpl的窗口管理器来维护应用程序窗口的。
+    - 这个类型为PhoneWindow的应用程序窗口内部有一个类型为DecorView的视图对象，这个视图对象才是真正用来描述一个Activity组件的UI的。
 
 
 
