--- a/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
+++ b/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
@@ -25,8 +25,8 @@
 
 ### 02.Navigation设计思想
 #### 2.1 Navigation基础介绍
-- Navigation是一个可简化Android导航的库和插件
-    - 更确切的来说，Navigation是用来管理Fragment的切换，并且可以通过可视化的方式，看见App的交互流程。
+- `Navigation`是一个可简化`Android`导航的库和插件
+    - 更确切的来说，`Navigation`是用来管理`Fragment`的切换，并且可以通过可视化的方式，看见App的交互流程。
 - 最关键的三要素
     - Navigation Graph(New XML resource)	
         - 这是一个新的资源文件，用户在可视化界面可以看出他能够到达的Destination(用户能够到达的屏幕界面)，以及流程关系。
@@ -41,6 +41,21 @@
 
 
 #### 2.2 Navigation如何设计
+- 设计`NavHostFragment`。作为`Activity`导航界面的载体；管理并控制导航的行为。
+    - NavHostFragment作为容器，主要是负责承载View，解析参数。根据设计原则单一职责，将 **管理并控制导航的行为** 交给另外一个类，这个类的作用应该仅是 **控制导航行为**。为 **NavController**。
+    - NavHostFragment理应持有这个**NavController**的实例，并将导航行为 **委托** 给它，这里将 **NavController** 的持有者抽象为一个 **接口**，以便于以后的拓展。
+    - 然后设置NavHost接口，为了保证导航的 **安全**，NavHostFragment 在其 **作用域** 内，理应 **有且仅有一个NavController 的实例**。
+    - Navigation.findNavController(View)，参数中传递任意一个 view的引用似乎都可以获取 **NavController**——如何保证 **NavController 的局部单例**呢？
+    - findNavController(View)内部实现是通过 **遍历** View树，直到找到最底部 **NavHostFragment** 中的**NavController**对象。
+- 设计`NavController`。主要是作为路由跳转控制的管理者。
+    * 1.对navigation资源文件夹下nav_graph.xml的 **解析**。持有了一个 **NavInflater** ，并通过 **NavInflater** 解析xml文件。
+    * 2.通过解析xml，获取所有 **Destination**（目标点）的 **引用** 或者 **Class的引用**。通过反射的方式，实例化对应的 **Destination**，通过一个队列保存。
+    * 3.记录当前栈中 **Fragment的顺序**。使用Deque队列保存信息。
+    * 4.管理控制 **导航行为**，比如跳转下一个页面，关闭某页面等。
+- 设计`NavDestination`和`Navigator`。主要是导航的跳转操作。
+    - 对于不同的 **NavDestination** 来讲，它们之间的导航方式是不同的，这完全有可能（比如Activity 和 Fragment），如何根据不同的 **NavDestination** 进行不同的 **导航处理** 呢？
+    - 这个时候可以抽取，Google的方式是通过抽象出一个类，这个类叫做 **Navigator**，主要是指定导航，后退导航，导航到某页面等操作。
+    - **FragmentNavigator** 对应的是 **FragmentNavigator.Destination**，你可以把他理解为案例中的 **Fragment** 。
 
 
 
@@ -53,7 +68,8 @@
         - 通过bundle获取一些核心参数，比如：graphId(Graph文件id属性)，defaultHost(容器是否与系统的返回按钮相关联)，startDestinationArgs等等
         - 将获取的`graphId`设置到`NavHostController`控制器中，这个相当于设置跳转的核心地图。
     - 3.NavHostFragment#onViewCreated()，给view设置tag标签并且绑定`NavHostController`控制器
-        - 如果`view`的父布局不为空，则拿到父布局的id和当前`fragment`的id是否相同，如果相同则设置给父布局标签和控制器
+        - 如果`view`的父布局不为空，则拿到父布局的id和当前`fragment`的id是否相同，如果相同则设置给父布局标签和控制器。
+        - 注意Navigation.setViewNavController(view, mNavController)，这个是将view(这个View是NavHostFragment的根布局)和NavController绑定起来，通用tag标签。
 - `nav_graph`导航结构图如何解析
     - 1.NavHostFragment#onInflate()，主要是解析自定义属性。
         - 这个里面获取了给`NavHostFragment`容器设置的`defaultNavHost`属性，还有获取`navGraph`属性(对应是graph文件的id)
@@ -69,18 +85,23 @@
     - 
 
 
-
+#### 2.4 遇到问题的说明
+- 第一个问题：Navigation为何重建fragment？
+- 第二个问题：
 
 
 
 ### 03.DataBinding设计思想
 #### 3.1 DataBinding基础介绍
 
+
 #### 3.2 DataBinding如何设计
 
 
 
 #### 3.3 DataBinding原理流程
+
+#### 3.4 遇到问题的说明
 
 
 
@@ -92,6 +113,9 @@
 
 
 #### 4.3 Lifecycle原理流程
+
+
+#### 4.4 遇到问题的说明
 
 
 
