--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -12,11 +12,19 @@
 - 这是一个重要的练习，它能让你勇敢地去梦想，去了解自己。当我们不知我们要什么时，我们如何去要？所以，这个梦想规划的练习，是让我们去了解自己所要的，以及要如何去要。
 
 
-
 #### 1.2 让自己做个作业
 - 建议找一个时间，静静地坐下来，拿起你的纸与笔，一步一步来做。也许，你没有一次做完所有的步骤，没有关系，第二天再找一个时间，继续你未完的内心历程。
-- 建议，在一周内完成这个练习。然后经常拿起来看看，你会慢慢发现。你的眼光开始变得敏锐起来，你能在生活、工作、人际关系中快速地发现有助于自己目标实现的因素，并引为已用。
-- 几周内，你的内心会越来越稳定而有方向感。别人会开始注意到你的改变。几个月内，你会发现自己的一些目标在一步一步变在现实。你在无形中，走到一个令自己与他人惊讶的高度。
+- 建议，在一周内完成这个练习。几周内，你的内心会越来越稳定而有方向感。因为你渐渐对自己的未来有了规划……
+
+
+
+#### 1.3 将作业不断完善
+- 做了作业，然后经常拿起来看看，你会慢慢发现。你的眼光开始变得敏锐起来，你能在生活、工作、人际关系中快速地发现有助于自己目标实现的因素，并引为已用。
+- 别人会开始注意到你的改变。几个月内，你会发现自己的一些目标在一步一步变在现实。你在无形中，走到一个令自己与他人惊讶的高度。
+
+
+#### 1.4 总体规划的方案
+- 这个作业从设想到执行，总体的规划方案可以分为：事前编织梦想——>事中详细规划和落地——>事后持续落实和总结
 
 
 
@@ -32,6 +40,11 @@
 - 6）在生活中，有哪些活动，你觉得最重要的？
 - 7）假如你确定自己不会失败（拥有充实的时间、资源、能力等），你会敢于梦想哪一件事情？
 
+
+
+#### 2.2 做梦想存储罐
+- 写完10个愿望后，认真地把最重要的3项圈出来，然后，每天都把自己的自己写的愿望单子从头到尾看一遍，它会不断提醒你自己想要什么，你自然会在生活中密切关注可以帮助你实现这些愿望的机遇了。
+- 随便拿一个罐子，将梦想的纸条放到罐子，把它作为梦想储蓄罐，值得注意的是，为最重要的那些愿望各准备一个罐子。当你实现一个梦想的时候就标记一下。
 
 
 
@@ -98,6 +111,7 @@
 
 #### 4.3 创造一个好环境
 - 为自己创造一个适当的环境。零碎的时间可以学习零碎的知识，版块的时间可以学习比较系统的知识，如果自己比较受环境影响，那就去图书馆。我刚开始就是去首图图书馆，不管多烦，一去了就心静下来了。
+
 
 
 
