--- a/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
+++ b/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
@@ -85,6 +85,7 @@
     - 
 
 
+
 #### 2.4 遇到问题的说明
 - 第一个问题：Navigation为何重建fragment？
 - 第二个问题：
@@ -132,6 +133,7 @@
 ### 06.Paging设计思想
 #### 6.1 Paging基础介绍
 
+
 #### 6.2 Paging如何设计
 
 
@@ -142,11 +144,25 @@
 
 ### 07.ViewModel设计思想
 #### 7.1 ViewModel基础介绍
+- ViewModel简单介绍
+    - ViewModel同样具有生命周期意识的处理跟UI相关的数据，并且，当设备的一些配置信息改变（例如屏幕旋转）它的数据不会消失。
+    - ViewModel的另一个特点就是同一个Activity的Fragment之间可以使用ViewModel实现共享数据。
+- ViewModel设计的思想
+    - Model-View-ViewModel，并非是一个新鲜的词汇，它的定义最早起源于前端，代表着 数据驱动视图 的思想。类似Vue布局和数据绑定的关系。
+- ViewModel前世痛点
+    - 看之前老的MVP或者MVVM项目的时候，ViewModel一般是开发者定义处理数据相关的接口。比如：TaskViewModel
+    - 不同的MVVM也有截然不同的实现方式，难以严格统一的 开发流派 导致代码质量的参差不齐，代码的可读性更是天差地别。
+
+
 
 #### 7.2 ViewModel如何设计
+- 
 
 
 #### 7.3 ViewModel原理流程
+
+
+#### 7.4 遇到问题的说明
 
 
 
