--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -10,6 +10,8 @@
 ### 01.这是重要的练习
 #### 1.1 首先了解自己
 - 这是一个重要的练习，它能让你勇敢地去梦想，去了解自己。当我们不知我们要什么时，我们如何去要？所以，这个梦想规划的练习，是让我们去了解自己所要的，以及要如何去要。
+- ![image](https://img-blog.csdnimg.cn/364875db3a484f56be904cb77238cb46.png)
+
 
 
 #### 1.2 让自己做个作业
@@ -19,32 +21,26 @@
 
 
 #### 1.3 将作业不断完善
-- 做了作业，然后经常拿起来看看，你会慢慢发现。你的眼光开始变得敏锐起来，你能在生活、工作、人际关系中快速地发现有助于自己目标实现的因素，并引为已用。
-- 别人会开始注意到你的改变。几个月内，你会发现自己的一些目标在一步一步变在现实。你在无形中，走到一个令自己与他人惊讶的高度。
+- 做了作业，需要不断完善。然后经常拿起来看看，你会慢慢发现。你的眼光开始变得敏锐起来，你能在生活、工作、人际关系中快速地发现有助于自己目标实现的因素，并引为已用。
+- 别人会开始注意到你的改变。几年内，你会发现自己的一些目标在一步一步变在现实。你在无形中，走到一个令自己与他人惊讶的高度。
 
 
 #### 1.4 总体规划的方案
-- 这个作业从设想到执行，总体的规划方案可以分为：事前编织梦想——>事中详细规划和落地——>事后持续落实和总结
+- 这个作业从设想到执行，总体的规划方案可以分为：事前编织梦想——>事中详细规划和落地——>事后持续落实和总结。
 
 
 
 ### 02.事前大胆去想象
-#### 2.1 开始编辑美梦
+#### 2.1 开始编辑目标
 - **先开始编织美梦，包括你想拥有的，你想做的，你想成为的，你想体验的**。现在，请坐下来，拿一张纸和一支笔，动手写下你的心愿。
 - 在你写的时候，不必管那些目标该用什么方式去达成，就是尽量写。直到你觉得没有什么可以写的时候，你可以看看下面几个问题并回答它们，这些问题会引导你去了解自已内心深处的渴求，这会花上一些时间，但你现在的努力，将是为下一步丰盛的收获作下基础。
 - 1）在你生活中，你认为哪五件事情最有价值？
-- 2）在你的生活中，有哪三个最重要的目标？
+- 2）在你的生活中，有哪三个最重要的目标？可以先罗列10个目标然后再依次去除！
 - 3）假如你只有六个月的生命，你会如何地运用这六个月？
 - 4）假如你立刻赚取了第一桶金，在哪些事情上，你的做法会和今天不一样？
 - 5）有哪些事是你一直想做，但却不敢尝试去做的？
 - 6）在生活中，有哪些活动，你觉得最重要的？
 - 7）假如你确定自己不会失败（拥有充实的时间、资源、能力等），你会敢于梦想哪一件事情？
-
-
-
-#### 2.2 做梦想存储罐
-- 写完10个愿望后，认真地把最重要的3项圈出来，然后，每天都把自己的自己写的愿望单子从头到尾看一遍，它会不断提醒你自己想要什么，你自然会在生活中密切关注可以帮助你实现这些愿望的机遇了。
-- 随便拿一个罐子，将梦想的纸条放到罐子，把它作为梦想储蓄罐，值得注意的是，为最重要的那些愿望各准备一个罐子。当你实现一个梦想的时候就标记一下。
 
 
 
@@ -55,14 +51,20 @@
 
 
 
-#### 2.3 要设置期限
+#### 2.3 做梦想存储罐
+- 写完10个愿望后，认真地把最重要的3项圈出来，然后，每天都把自己的自己写的愿望单子从头到尾看一遍，它会不断提醒你自己想要什么，你自然会在生活中密切关注可以帮助你实现这些愿望的机遇了。
+- 随便拿一个罐子，将梦想的纸条放到罐子，把它作为梦想储蓄罐，值得注意的是，为最重要的那些愿望各准备一个罐子。当你实现一个梦想的时候就标记一下。
+
+
+
+#### 2.4 要设置期限
 - 审视自己所写的，预期希望达成的时限。你希望何时达成呢？有实现时限的才可能叫目标，没时限的只能叫梦想，没落实的只能叫空想。
 
 
 
-#### 2.4 过滤成3个目标
+#### 2.5 过滤3个目标
 - 选出在这一年里对你最重要的三个目标。从你所列出的目标里选择你最愿意投入的、最令你雀跃欲试的、最能令你满足的三件事，并把他们写下来。
-- 现在我建议你明确地、扼要地、肯定地写下你实现它们的真正理由，告诉你自己能实现目标的把握和它们对你的重要性。
+- 现在建议你明确地、扼要地、肯定地写下你实现它们的真正理由，告诉你自己能实现目标的把握和它们对你的重要性。
 - 如果你做事知道如何找出充分的理由，那你就无所不能，因为追求目标的动机比目标本身更能激励我们。
 
 
@@ -74,13 +76,13 @@
 - 2）结果要尽可能具体，还要明确订出完成的期限与项目；
 - 3）事情完成时你要能知道完成了，可以用todo标注事项掌握进度；
 - 4）要能抓住主动权，而非任人左右；
-- 5）是否对社会有利。
+- 5）是否能够让自己得到价值认可。
 
 
 
 #### 3.2 列出拥有资源
 - 列出你已经拥有的各种重要的资源。当你进行一个计划，就得知道该使用哪些工具。
-- 列出一张你所拥有资源的清单，里面包括自己的个性、朋友、财物、教育背景、时限、能力、以及其他。这份清单越详尽越好。
+- 列出一张你所拥有资源的清单，里面包括自己的个性、朋友、财物、教育背景、时限、能力、技能、以及其他。这份清单越详尽越好。
 
 
 #### 3.3 做完要去回顾
@@ -97,14 +99,14 @@
 
 ### 04.事后坚持要落实
 #### 4.1 弄一个进度清单
-- 现在请你针对自己那三个重要目标，订出实现它们的每一步骤。别忘了，从你的目标往回订步骤，并且自问，我第一步该如何做，才会成功？是什么妨碍了我，我该如何改变自己呢？
-- 一定要记得你的计划得包含今天你可以做的，千万不要好高鹜远。同时，如果某一天卡住了，可以选择跳过进入下一个目标。过段时间再去看卡点和解决。
+- 现在请你针对自己那三个重要目标，制订出实现它们的每一步骤。别忘了，从你的目标往回订步骤，并且自问，我第一步该如何做，才会成功？是什么妨碍了我，我该如何改变自己呢？
+- 一定要记得你的计划得包含今天你可以做的，千万不要好高鹜远和吹牛逼。同时，如果某一天卡住了，可以选择跳过进入下一个目标。过段时间再去看卡点和解决。
 - 进度清单，不要太过于详细，我理解为就是掌控一个全局进度的清单，写好每一个阶段做的事情即可，每次完成一个节奏勾选一下。因为我试过，每周弄清单那种实在太累了，调整成月，季度，年这个节奏会好一点。
 
 
 
 #### 4.2 找效仿的模范
-- 有时候，总有些烦心的事情，或者遇到了某坎，不想坚持想躺平了。怎么办？那就找到几个好朋友，相互激烈，相互讨论，有几个就好。
+- 有时候，总有些烦心的事情，或者遇到了某坎，不想坚持想躺平了。怎么办？那就找到几个好朋友，相互激烈地讨论，有几个就好。
 - 为自己找一些值得效法的模范。从你周围或从名人当中找出三位在你目标领域中有杰出成就的人。在你做完这件事，请你阖上眼睛想一想，仿佛他们每一个人都会提供你一些能达成目标的建议，记下他们每一位建议的方法，如同他们与你私谈一样。
 
 
