--- a/Read/ReadMeWiki/06.Framework/09.AMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framework/09.AMS机制深入分析.md
@@ -3,10 +3,11 @@
     - 1.1 AMS是什么
     - 1.2 应用于那些场景
     - 1.3 可以解决那些问题
-- 02.AMS核心类说明
+- 02.AMS总体介绍
+    - 2.1 AMS创建流程
 - 03.AMS流程分析
-
-
+    - 3.1 AMS启动流程
+    - 3.2 AMS初始化流程
 
 
 ### 01.快速了解AMS机制
@@ -35,12 +36,47 @@
 
 
 
+### 02.AMS总体介绍
+#### 2.1 AMS创建流程
+- AMS 即 ActivityManagerService
+    - 负责 Activity、Service、Broadcast、ContentProvider 四大组件的生命周期管理。
+    - ![image](https://img-blog.csdnimg.cn/9d6c4172078746ddac98812811a51645.png)
+- AMS 创建流程简述：
+    - SystemServer：依次调用 main()、run()、startBootstrapServices()，再调用 Lifecycle 的 startService() 方法；
+    - Lifecycle：startService() 方法中调用 SystemServiceManager 的 startService() 方法，并将 Lifecycle.class 传入；
+    - SystemServiceManager：startService() 方法通过反射调用 Lifecycle 的构造方法，生成 Lifecycle 对象；
+    - Lifecycle：构造方法中调用 AMS 的构造方法创建 AMS 对象，并通过 getService() 方法返回 AMS 对象。
+
+
+### 03.AMS流程分析
+#### 3.1 AMS启动流程
+- AMS启动流程如下所示
+    - SystemServer#main()，这个是AMS启动的入口。执行java代码中的main方法，创建了一个SystemServer对象并且执行run方法
+    - SystemServer#run()，创建系统的 Context，创建 SystemServiceManager，启动引导服务，启动核心服务，启动其他服务。
+    - SystemServer#startBootstrapServices()，启动 AMS，启动 PMS等核心逻辑
+    - ActivityManagerService.Lifecycle#startService()，这个是开启AMS服务
+    - SystemServiceManager#startService()，通过反射调用 serviceClass 的构造方法 创建 Lifecycle 对象
+    - SystemServiceManager#startService()#service.onStart()，调用 Lifecycle 的 onStart 方法。
+    - ActivityManagerService.Lifecycle#onStart()，进一步调用 AMS 的 start() 方法初始化。
+
+
+#### 3.2 AMS初始化流程
+- AMS初始化流程图如下
+    - ![image](https://img-blog.csdnimg.cn/5382b71552ef401e91cdfd7f5a0209f4.png)
+- AMS初始化流程步骤
+    - ActivityManagerService#()，在构造函数中创建用于启动 Service 的 mServices 对象，创建用于存储 ContentProvider 的 mProviderMap等。
+    - ActivityManagerService.Lifecycle#onStart()，进一步调用 AMS 的 start() 方法初始化。
+    - SystemServer#startBootstrapServices()，调用了 AMS 的 initPowerManagement() 和 setSystemProcess() 方法。
 
 
 
 
 
-https://blog.csdn.net/m0_37602827/article/details/111431909
+
+
+
+
+
 
 
 
