--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -13,7 +13,11 @@
     - 3.1 Activity和Window
     - 3.2 窗口Window创建过程
 - 04.视图View创建
-    - 4.1 
+    - 4.1 视图View的介绍
+    - 4.2 DecorView类实现
+    - 4.3 窗口视图与ViewRoot
+    - 4.4 窗口视图创建过程
+
 
 
 ### 01.Android组件UI实现
@@ -158,6 +162,58 @@
     - 这个类型为PhoneWindow的应用程序窗口是通过一个类型为LocalWindowManager的本地窗口管理器来维护的。
     - 这个类型为LocalWindowManager的本地窗口管理器又是通过一个类型为WindowManagerImpl的窗口管理器来维护应用程序窗口的。
     - 这个类型为PhoneWindow的应用程序窗口内部有一个类型为DecorView的视图对象，这个视图对象才是真正用来描述一个Activity组件的UI的。
+
+
+### 04.视图View创建
+#### 4.1 视图View的介绍
+- 每一个Activity组件都有一个关联的Window对象，用来描述一个应用程序窗口。
+    - 每一个应用程序窗口内部又包含有一个View对象，用来描述应用程序窗口的视图。应用程序窗口视图是真正用来实现UI内容和布局的，每一个Activity组件的UI内容和布局都是通过与其所关联的一个Window对象的内部的一个View对象来实现的。
+    - 应用程序窗口内部所包含的视图对象的实际类型为DecorView。DecorView类继承了View类，是作为容器（ViewGroup）来使用的。
+
+
+
+#### 4.2 DecorView类实现
+- DecorView类的实现的流程图
+    - ![image](https://img-blog.csdnimg.cn/e472012c6ebe4696b031b83653a99b71.png)
+
+
+
+#### 4.3 窗口视图与ViewRoot
+- 窗口视图与ViewRoot流程图
+    - 每一个应用程序窗口的视图对象都有一个关联的ViewRoot对象，这些关联关系是由窗口管理器来维护的。
+    - ![image](https://img-blog.csdnimg.cn/835afe22838b40c39393165d5415c447.png)
+- 简单来说，ViewRoot相当于是MVC模型中的Controller，它有以下职责：
+    - 1.负责为应用程序窗口视图创建Surface。
+    - 2.配合WindowManagerService来管理系统的应用程序窗口。
+    - 3.负责管理、布局和渲染应用程序窗口视图的UI。
+- 应用程序窗口的视图对象及其所关联的ViewRoot对象是什么时候开始创建的呢？
+    - Activity组件在启动的时候，系统会为它创建窗口对象（Window），同时，系统也会为这个窗口对象创建视图对象。
+    - 另一方面，当Activity组件被激活的时候，系统如果发现与它的应用程序窗口视图对象所关联的ViewRoot对象还没有创建，那么就会先创建这个ViewRoot对象，以便接下来可以将它的UI渲染出来。
+
+
+
+#### 4.4 窗口视图创建过程
+- 分析应用程序窗口的视图对象及其所关联的ViewRoot对象的创建过程
+    - ![image](https://img-blog.csdnimg.cn/afef0603fa0643fe81853e7523520a15.png)
+- 应用程序窗口视图的创建过程
+    - Activity组件在启动的过程中，会调用ActivityThread类的成员函数handleLaunchActivity，用来创建以及首次激活Activity组件，因此，接下来就从这个函数开始，具体分析应用程序窗口的视图对象及其所关联的ViewRoot对象的创建过程。    
+    > ActivityThread#handleLaunchActivity()，调用ActivityThread类的成员函数performLaunchActivity来创建要启动的Activity组件。
+    > ActivityThread#performLaunchActivity()，它主要就是创建一个Activity组件实例，并且调用这个Activity组件实例的成员函数onCreate来让其执行一些自定义的初始化工作。
+    > Activity#onCreate()，在实现一个Activity组件的时候，一般都会重写成员函数onCreate，以便可以执行一些自定义的初始化工作，其中就包含初始化UI的工作。
+    > Activity#setContentView()，首先调用另外一个成员函数getWindow来获得成员变量mWindow(指向PhoneWindow)所描述的一个窗口对象，接着再调用这个窗口对象的成员函数setContentView来执行创建应用程序窗口视图对象的工作。
+    > PhoneWindow#setContentView()，成员变量mContentParent(指DecorView的视图对象)，当它等于null，就会调用成员函数installDecor来创建应用程序窗口视图对象。最后还会调用一个Callback接口的成员函数onContentChanged来通知对应的Activity组件，它的视图内容发生改变。
+    > PhoneWindow#installDecor()，当mDecor等于null，调用成员函数generateDecor创建一个DecorView对象，并且保存在PhoneWindow类的成员变量mDecor中。
+    - ActivityThread类的成员函数handleLaunchActivity中，接下来就会调用ActivityThread类的另外一个成员函数handleResumeActivity来激活正在启动的Activity组件。
+    > ActivityThread#handleResumeActivity()，首先调用另外一个成员函数performResumeActivity来通知Activity组件，它要被激活了，即会导致Activity组件的成员函数onResume被调用。
+    > handleResumeActivity#r.activity.getWindow()，getWindow返回给调用者的是一个PhoneWindow对象
+    > handleResumeActivity#r.activity.getDecorView()，通过getDecorView来获得当前正在激活的Activity组件所关联的一个应用程序窗口视图对象
+    > handleResumeActivity#a.getWindowManager()，调用当前正在激活的Activity组件的成员函数getWindowManager来获得一个本地窗口管理器。
+    > handleResumeActivity#wm.addView(decor, l)，addView来为当前正在激活的Activity组件的应用程序窗口视图对象关联一个ViewRoot对象。
+    > WindowManagerGlobal#addView()，这个里面会创建ViewRootImpl对象，一个View对象在与一个ViewRoot对象关联的同时，还会关联一个WindowManager.LayoutParams对象，这个WindowManager.LayoutParams对象是用来描述应用程序窗口视图的布局属性的。
+    > WindowManagerGlobal#addView#root.setView，将这个View对view象和这个WindowManager.LayoutParams对象，以及变量panelParentView所描述的一个父应用程序窗视图对象，保存在这个ViewRoot对象root的内部
+    > ViewRootImpl#setView()，调用requestLayout来请求对应用程序窗口视图的UI作第一次布局。调用静态成员变量sWindowSession所描述的一个类型为Session的Binder代理对象的成员函数add来请求WindowManagerService增加一个WindowState对象，以便可以用来描述当前正在处理的一个ViewRoot所关联的一个应用程序窗口。
+
+
 
 
 
