--- a/Read/ReadMeWiki/06.Framework/09.AMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framework/09.AMS机制深入分析.md
@@ -67,7 +67,8 @@
     - ActivityManagerService#()，在构造函数中创建用于启动 Service 的 mServices 对象，创建用于存储 ContentProvider 的 mProviderMap等。
     - ActivityManagerService.Lifecycle#onStart()，进一步调用 AMS 的 start() 方法初始化。
     - SystemServer#startBootstrapServices()，调用了 AMS 的 initPowerManagement() 和 setSystemProcess() 方法。
-
+    - SystemServer#startCoreServices()，调用了 AMS 的 setUsageStatsManager()  方法。
+    - SystemServer#startOtherServices()，调用了 AMS 的 installSystemProviders()、setWindowManager()  和 systemReady() 方法。
 
 
 
