--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -71,7 +71,7 @@
 
 ### 03.事中详细去规划
 #### 3.1 校核设定目标
-- 想通过Android开发一年赚100万，这是欲望不是目标。虽然说设置目标要远大，但是一定要具体，不要吹牛逼。因为你我大都是普通人……核对你所列的三个目标，是否与形成结果的五大规则相符。
+- 想通过技术开发一年赚100万，这是欲望不是目标。虽然说设置目标要远大，但是一定要具体，不要吹牛逼。因为你我大都是普通人……核对你所列的三个目标，是否与形成结果的五大规则相符。
 - 1）用肯定的语气来预期你的结果，说出你希望的而非不希望的；
 - 2）结果要尽可能具体，还要明确订出完成的期限与项目；
 - 3）事情完成时你要能知道完成了，可以用todo标注事项掌握进度；
@@ -83,6 +83,7 @@
 #### 3.2 列出拥有资源
 - 列出你已经拥有的各种重要的资源。当你进行一个计划，就得知道该使用哪些工具。
 - 列出一张你所拥有资源的清单，里面包括自己的个性、朋友、财物、教育背景、时限、能力、技能、以及其他。这份清单越详尽越好。
+
 
 
 #### 3.3 做完要去回顾
