--- a/Read/ReadShareWiki/11.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/11.生活博客/02.生活感想大集合.md
@@ -42,11 +42,11 @@
     - 有一句话说得好，一个人越是百无一用的时候，越执念于那些无足轻重的底线，处处都要表现出自己强大的自尊心。因为除了自尊心，有时候一无所有。
     - 记得大学时做兼职去大街上发小传单，当时觉得有点放不下面子，所以拉着几个同学一起，这样就不会显得太难堪，但是也有人独立超额完成了任务，我记得当时的任务就是带别人去房产公司营业点，后来这个人进步最快，因为一个能够放下自尊去做事情的人，看的是目标结果。
     - 而我们看的是，所谓的面子，对于当时我们这些一穷二白又渴望成功的年轻人，过度强调自尊其实是绊脚石。太要强太敏感的自尊，其实来源于自卑。
-- 拥有真本事会让人尊重
+- **拥有真本事会让人尊重**
     - 过分强调自尊和面子，其实是种没有见过世面的体现。因为层次越高的人，越不在乎他人眼中的面子。
     - 以前有个领导，她说她刚毕业的时候，为了让大家觉得这不是个职场菜鸟，攒了好几个月工资，给自己从上到下买了一身名牌的行头，看起来特别职业。但是现在她都做到公司高层了，反而穿得越来越朴素简单。和她合作的，谈笑风生的，都是一些领域很厉害的人。
     - 她说，以前，需要一些名牌的东西，去撑起自己的体面，但一开口，还是因为不专业而露怯。但是，当你变得专业起来，有观点、有思想、有能力后，没有人因为你穿得不好不对而看不起你，更没有人因为你背了个几十万的包包而觉得你了不起。
-    - 大家尊重一个人的标准，反而是看你真正拥有的本事。因为本事越大，层次才会越高，看到的东西也不一样。面子和自尊从来不完全是别人给的，而是有部分靠自己的本事赚的。
+    - 大家尊重一个人的标准，反而是看你真正拥有的本事。**因为本事越大，层次才会越高，看到的东西也不一样。面子和自尊从来不完全是别人给的，而是有部分靠自己的本事赚的**。
 
 
 
@@ -54,22 +54,31 @@
 
 
 ### 03.思考旅行的意义
-- 有些人喜欢赋予意义。吃个橙子说富含维C，吃个苹果说有益长寿，旅行也是如此，动不动就上升到精神层面，又是见多识广，又是洗涤灵魂。累不累？为什么不能勇敢地承认，吃东西就是因为好吃，出去玩就是因为好玩？
-- 这个问题其实很简单，想想身边刚旅行回来的朋友就懂了，你觉得他有改变吗？心胸宽广了吗，更好沟通了吗，工作能力更强了吗？得到的答案多半是否定的。
-- 因为一个人的改变，极少源于广阔天边的风景。它们要么源于日积月累的琐碎、磨人生活，要么源于突如其来的人生巨变。一份日厮月磨的工作，一个长期磨合的伴侣，一个亲人的陡然离世，一个家庭的突生变故……相比于十天半个月的旅行，这些更能令人脱胎换骨。
-- 当然，如果一个人天天在路上，一年有半年都旅居国外，思维和眼界是会区别于常人。但这不是废话吗，一个有钱又有闲，可以常年出去玩的人，能是普通人吗？
-- 出去玩一趟谁不会呢？能改变什么呢？可以发送心情，但是质的变化的确不容易……但问题的关键出在哪呢？旅游轻松愉快，读书艰难困苦，权衡之下，还是安慰自己出去玩更涨见识吧！
-- 当然不反对旅行。很反对把旅行这种事，扣上高大上的帽子。行万里路，原本是一件光风霁月的事。它应该是轻松的，自由的，无功利的，自内而外的愉悦和享受，而不该被赋予功利的意义，承载什么鬼灵魂升华的任务。
+- 有些人喜欢赋予意义。
+    - 吃个橙子说富含维C，吃个苹果说有益长寿，旅行也是如此，动不动就上升到精神层面，又是见多识广，又是洗涤灵魂。累不累？为什么不能勇敢地承认，吃东西就是因为好吃，出去玩就是因为好玩？
+    - 这个问题其实很简单，想想身边刚旅行回来的朋友就懂了，你觉得他有改变吗？心胸宽广了吗，更好沟通了吗，工作能力更强了吗？得到的答案多半是否定的。
+- 旅行意义并非那么大
+    - 一个人的改变，极少源于广阔天边的风景。它们要么源于日积月累的琐碎、磨人生活，要么源于突如其来的人生巨变。一份日厮月磨的工作，一个长期磨合的伴侣，一个亲人的陡然离世，一个家庭的突生变故……相比于十天半个月的旅行，这些更能令人脱胎换骨。
+    - 当然，如果一个人天天在路上，一年有半年都旅居国外，思维和眼界是会区别于常人。但这不是废话吗，一个有钱又有闲，可以常年出去玩的人，能是普通人吗？
+- 出去玩一趟谁不会呢
+    - 能改变什么呢？可以发送心情，但是质的变化的确不容易……但问题的关键出在哪呢？旅游轻松愉快，读书艰难困苦，权衡之下，还是安慰自己出去玩更涨见识吧！
+- 当然不反对旅行
+    - 很反对把旅行这种事，扣上高大上的帽子。行万里路，原本是一件光风霁月的事。它应该是轻松的，自由的，无功利的，自内而外的愉悦和享受，而不该被赋予功利的意义，承载什么鬼灵魂升华的任务。
 
 
 
 
 
 ### 04.遇事别总挣对错
-- 有一句话：“小朋友才分对错，大人只看利弊。”这句话的意思大概是说，人成年之后，对很多事情不分对错，更看重的是利与弊，只有不成熟的小孩子才会去讲对错。
-- 有时间去跟别人争什么对错，还不如用自己宝贵的时间，去工作，去赚钱，去改变人生；有精力去跟别人吆五喝六，还不如省省力气，用自己宝贵的精力，去自控，计划将来，创造更多的可能。
-- 也是在这样的前提下，生活中不管出现了什么问题，我的第一反应都是，这个问题我应该怎样弥补，如果无法弥补，我应该怎么解决。而绝不是去责怪谁，去找是谁的错，然后大发脾气。第一，不好的事情已经出现了，怪谁都没用，重要的是解决问题。第二，你发脾气不但解决不了问题，还会让你费心费神，何必呢？
-- 在问题出现之后，尽可能快且有效地解决问题，之后认真地反思问题出在哪里，避免下次再出差错。这才是我真正要达到的目的。以前，工作进度被耽搁了，之后听到有人总是在哪里抱怨。后来实在忍不了，说：“现在出了问题，我们解决问题，你在这里狂轰滥炸发脾气，说谁做得不好，谁的错，谁垃圾，有用吗？你在这发脾气骂人都两个小时了，如果你骂人有用，你接着骂，我们先回去。如果想解决问题，给明星一个好的解释，那我们一起想办法解决问题。”
+- 小朋友才分对错，大人只看利弊
+    - 这句话的意思大概是说，人成年之后，对很多事情不分对错，更看重的是利与弊，只有不成熟的小孩子才会去讲对错。
+    - 有时间去跟别人争什么对错，还不如用自己宝贵的时间，去工作，去赚钱，去改变人生；有精力去跟别人吆五喝六，还不如省省力气，用自己宝贵的精力，去自控，计划将来，创造更多的可能。
+- 生活中不管出现了什么问题，第一反应都是，这个问题我应该怎样弥补
+    - 如果无法弥补，我应该怎么解决。而绝不是去责怪谁，去找是谁的错，然后大发脾气。
+    - 第一，不好的事情已经出现了，怪谁都没用，重要的是解决问题。第二，你发脾气不但解决不了问题，还会让你费心费神，何必呢？
+    - 在问题出现之后，尽可能快且有效地解决问题，之后认真地反思问题出在哪里，避免下次再出差错。这才是我真正要达到的目的。
+    - 以前，工作进度被耽搁了，之后听到有人总是在哪里抱怨。后来实在忍不了，说：“现在出了问题，我们解决问题，你在这里狂轰滥炸发脾气，说谁做得不好，谁的错，谁垃圾，有用吗？
+    - 你在这发脾气骂人都两个小时了，如果你骂人有用，你接着骂，我们先回去。如果想解决问题，给一个好的解释，那我们一起想办法解决问题。”
 - 即便这样，本来可以很快解决的事，因为非要分个什么对错好坏，骂骂咧咧的，从下午4点一直争吵到晚上9点才解决。成年人了，遇见事情，为什么不能冷静下来，想想问题出在哪里，怎么解决呢？骂人是爽，占了上风的确很威风，可是有什么用？问题能解决吗？下一次是否能避免问题再次发生？并且一般能跟我们发生冲突的人，多数都是平日里打交道、有来往的人。得饶人处且饶人，凡事想开点，如果生活中事事都去计较，都要分对错，人还怎么活？
 - 小孩子才分对错，在父母面前理论清楚，到底是他先动手打的你，还是你先动手掐的他。成年人就算了，很多时候不是因为没有对错，而是对错根本不重要。
 - 凡事记住两点：第一，你很贵，你的时间更宝贵，不要为一些小事浪费自己的宝贵时间。鲁迅说：“浪费别人的时间，等于谋财害命；浪费自己的时间，等于慢性自杀”。别人的时间，我们耽误不起，自己的时间更耗费不得。第二，凡事退一步海阔天空。对方没谋财没害命，不疼不痒的口角之争，都可以忽略不计。适当地妥协和让步，会体现你的素质和修养。并且，人成熟以后，事情多得要命。要工作，要赚钱，要恋爱，要结婚，要生娃，要学习维护一段感情，要学习为人父母，要孝顺爸妈，要提升自己……
@@ -80,8 +89,8 @@
 
 
 ### 06.经济学机会成本
-- 经济学中有一个非常重要的概念——机会成本。虽然人人在行动上都按照这个规律去做事，但自觉地理解这个概念的人，却并不很多——甚至很少。
-- 一件事情的成本，并不是为了做这件事直接付出的代价，而是因为做这件事而不得不放弃的其他事情中，价格最贵的那个。
+- 经济学中有一个非常重要的概念——机会成本。
+    - 一件事情的成本，并不是为了做这件事直接付出的代价，而是因为做这件事而不得不放弃的其他事情中，价格最贵的那个。
 - 说起来有些绕，举例解释一下就清楚了。你晚上去看电影，成本不仅仅是那张电影票和来回交通费，更主要的成本是，如果去看电影，那你晚上就不能做别的事情了。那晚上你可能做的其他事情，其中最重要的那个，再加上电影票等费用，才是你看电影的全部成本。
 - 如果那晚你本来可以和巴菲特一起吃饭聊天的，那么，你看电影的成本就很高了，高到很少有人能承受，因此，现实中，我们不会见到有人为了看电影而放弃和巴菲特共进晚餐。
 - 机会成本这个概念中，包含有“比较”的含义。理解了机会成本这个经济学概念以后，人们在思考问题时，就会具备一种经济学的思维方式：如果一个方案被否定了，被取消了，那么，取而代之的是什么？这个替代方案，和原来那个方案相比，是更好了，还是更差了？
