--- a/Read/ReadShareWiki/11.生活博客/01.如何让自己有趣.md
+++ b/Read/ReadShareWiki/11.生活博客/01.如何让自己有趣.md
@@ -9,7 +9,7 @@
 - 1、经常看一些有趣的书籍或者电影，丰富自己的幽默见识，记录下一些有趣的小段子；
 - 2、善于发现生活中与段子或者有趣的情节似曾相识的地方，不经意间用上你之前看过的段子，逗别人一笑，千万要自然不要刻意；
 - 3、学会逆行思维，经常说一下不按常理出牌但是却有合理的答案
-- 4、故意犯错，故意说错一些常识性的成语，比如打篮球队与队相互输赢，你就说：真是一物降（jiang）一物啊，这样别人会忍不住笑你，气氛会更融洽
+- 4、故意犯错，故意说错一些常识性的成语，比如打篮球队与队相互输赢，你就说：真是一物降一物啊，这样别人会忍不住笑你，气氛会更融洽
 - 5、关注点易于别人，比如有人说马上来，但是很久没来，你就说：同志，你的马是不是没吃饱，跑的这么慢？
 - 6、最直接的方法就是给别人讲笑话，讲段子。
 
